--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "water_blling" "\0"
+            VALUE "FileDescription", "water_billing" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "water_blling" "\0"
+            VALUE "InternalName", "water_billing" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "water_blling.exe" "\0"
-            VALUE "ProductName", "water_blling" "\0"
+            VALUE "OriginalFilename", "water_billing.exe" "\0"
+            VALUE "ProductName", "water_billing" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
