--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   camera: ^0.10.5+5
   # google_mlkit_text_recognition: ^0.4.0
   permission_handler: ^11.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
