--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+5
-  # google_mlkit_text_recognition: ^0.4.0
-  permission_handler: ^11.0.1
+  # google_mlkit_text_recognition: ^0.10.0
+  # permission_handler: ^11.0.1
   intl: ^0.18.1
+  google_ml_kit: ^0.7.3
+  image_picker: ^0.8.4+9
 
 dev_dependencies:
   flutter_test:
